--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>1.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-step-api</artifactId>
+            <version>0.1-beta-2-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jvnet.mock-javamail</groupId>
