--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <powermock.version>1.6.4</powermock.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <workflow.version>1.10</workflow.version>
-        <jenkins.version>1.609.2</jenkins.version>
+        <jenkins.version>1.650</jenkins.version>
         <java.level>7</java.level>
     </properties>
 
@@ -92,6 +92,16 @@
         </dependency>
 
         <!-- other plugins -->
+        <dependency>
+             <groupId>org.jvnet.hudson.plugins</groupId>
+            <artifactId>pmd</artifactId>
+            <version>3.45</version>
+        </dependency> 
+        <dependency>
+             <groupId>org.jvnet.hudson.plugins</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>3.46</version>
+        </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
